--- a/src/app/components/appointment/appointment.component.html
+++ b/src/app/components/appointment/appointment.component.html
@@ -4,7 +4,7 @@
     <h2>Dein Termin im City-Style Salon</h2>
     <p>
       Service, Stylist:in und Termin wählen – wir melden uns blitzschnell zur Bestätigung. Kurzfristig erreichbar unter
-      <a href="tel:+4915123456789">+49 (0)151 234 567 89</a>.
+      <a href="tel:+4915123456789">0911 421966</a>.
     </p>
   </div>
 
