Impressum und datenschutz fertig

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -10,7 +10,8 @@
     </header>
 
     <div class="contact-details">
-      <a href="tel:+49301234567">0911 421966</a>
+      <a href="tel:+49911421966">0911 421966</a>
+      <a href="mailto:hallo@city-style.de">hallo@city-style.de</a>
     </div>
 
     <ul class="socials">
