--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,3 @@
 <app-navigation></app-navigation>
-
-<main class="page">
-  <app-hero></app-hero>
-  <app-about></app-about>
-  <app-pricing></app-pricing>
-  <app-gallery></app-gallery>
-  <app-appointment></app-appointment>
-  <app-contact></app-contact>
-</main>
-
+<router-outlet></router-outlet>
 <app-footer></app-footer>
