--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,8 +2,8 @@
   <div class="footer-content">
     <p>© {{ year }} City-Style Salon · Urban Hair Excellence</p>
     <div class="links">
-      <a href="#">Impressum</a>
-      <a href="#">Datenschutz</a>
+      <a href="/datenschutzundimpressum">Impressum</a>
+      <a href="/datenschutzundimpressum#datenschutz">Datenschutz</a>
       <a href="#termine">Termin buchen</a>
     </div>
   </div>
