--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,8 @@
     <div class="links">
       <a href="/datenschutzundimpressum">Impressum</a>
       <a href="/datenschutzundimpressum#datenschutz">Datenschutz</a>
-      <a href="#termine">Termin buchen</a>
+      <a href="/#termine">Termin buchen</a>
+      <a href="/admin/termine">Admin</a>
     </div>
   </div>
 </footer>
