--- a/src/app/components/appointment/appointment.component.html
+++ b/src/app/components/appointment/appointment.component.html
@@ -83,7 +83,7 @@
       </button>
 
       <p class="confirmation" *ngIf="submitSuccess">
-        Danke! Wir melden uns in Kürze telefonisch oder per Mail, um Deinen Termin final zu bestätigen.
+        Danke! Termin erfolgreich reserviert.
       </p>
       <p class="error global" *ngIf="submitError">{{ submitError }}</p>
     </form>
