--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -32,7 +32,7 @@
   </div>
 
   <div class="hours-card" data-animate="fade-left">
-    <h3>Salon Hours</h3>
+    <h3>Öffnungszeiten</h3>
     <p>
       Wir arbeiten mit flexiblen Slots – sichere Dir Deinen Termin online oder ruf kurz durch, wenn Du
       einen Express-Service brauchst.
